# flink-getting-started

./: Dockerfile  README.md  docker-compose.yaml  generate.py  pyproject.toml
examples/scala/kafkawordcount/: README.md  build.sbt
examples/scala/kafkawordcount/src/main/scala/io/github/carloshkayser/: KafkaWordCount.scala
